--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="header bg-gradient-green py-7 py-lg-8">
+<div class="header bg-gradient-quickbank py-7 py-lg-8">
   <div class="container">
 
     <div class="header-body text-center mb-7">
