--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+.bg-gradient-quickbank
+{
+    background: linear-gradient(87deg, #28b56f 0, #1ad176 100%) !important;
+}
+
+.padding-top{
+  padding: 10px 0 10px 0;
+}
+
+.class-border{
+  border: 1px;
+
+}
+
+.title-card-div{
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+a{
+  color: #337ab7;
+  text-decoration: none;
+}
+
+.link-right{
+
+  float: right;
+}
+
+.link-left{
+
+  float: left;
+}
