--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,340 +1,167 @@
-<div class="header bg-gradient-green pb-8 pt-5 pt-md-8">
-  <div class="container-fluid">
-    <div class="header-body">
-      <!-- Card stats -->
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Saldo</h5>
-                  <span class="h2 font-weight-bold mb-0">
-                    <div *ngIf="(user$ | async) as user">
-                      <div *ngIf="mostraValor; else valorOculto">
-                        <span class="navbar-text">
-                          <i class="fas fa-eye-slash" (click)="mostrarValorOculto()">       R$ {{user.saldo}}</i>
-                        </span>
+<div class="container">
+  <div class="header bg-gradient-quickbank pb-8 pt-5 pt-md-8">
+    <div class="container-fluid">
+      <div class="header-body">
+        <!-- Card stats -->
+        <div class="row">
+          <div class="col-sm-8">
+            <div class="card card-stats mb-4 mb-xl-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">Saldo</h5>
+                    <span class="h2 font-weight-bold mb-0">
+                      <div *ngIf="(user$ | async) as user">
+                        <div *ngIf="mostraValor; else valorOculto">
+                          <span class="navbar-text">
+                            <i class="fas fa-eye-slash" (click)="mostrarValorOculto()">        {{user.saldo | currency:'BRL':true:'1.2-2'}}</i>
+                          </span>
+                        </div>
+                        <ng-template #valorOculto class="h2 font-weight-bold mb-0">
+                          <span class="navbar-text">
+                            <i class="far fa-eye" (click)="mostrarValorOculto()">       R$ ........</i>
+
+                          </span>
+                      </ng-template>
                       </div>
-                      <ng-template #valorOculto class="h2 font-weight-bold mb-0">
-                        <span class="navbar-text">
-                          <i class="far fa-eye" (click)="mostrarValorOculto()">       R$ ........</i>
-                          
-                        </span>
-                    </ng-template>
+                    </span>
+                  </div>
+                  <div class="col-auto">
+                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                      <i class="fas fa-dollar-sign"></i>
                     </div>
-                  </span>
+                  </div>
                 </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fas fa-dollar-sign"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card card-stats mb-4 mb-xl-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">Dados da Conta</h5>
+                     <div *ngIf="(user$ | async) as user">
+                       <p>
+                        <span class="h5 font-weight-bold mb-0">AG: {{user.agencia}} C: {{user.conta}}</span>
+                      </p>
+                     </div>
+                  </div>
+                  <div class="col-auto">
+                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                      <i class="fas fa-address-card"></i>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
+
+        <div class="row padding-top">
+            <!--Transfer-->
+
+            <div class="col-sm-6">
+
               <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Dados da Conta</h5>
-                   <div *ngIf="(user$ | async) as user">
-                     <p>
-                      <span class="h5 font-weight-bold mb-0">AG: {{user.agencia}} C: {{user.conta}}</span>
-                    </p>
-                   </div>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fas fa-address-card"></i>
+
+              <div class="col-md-6 col-6"><label class="h5 text-white text-uppercase link-left"> Últimas transações</label></div>
+              <div class="col-md-6 col-6"><a class="h5 text-white text-uppercase link-right" href="#">Ver mais</a></div>
+
+              </div>
+
+              <div *ngFor="let transfer of transferenciasResumo" class="padding-top">
+                <div  class="card card-stats mb-4 mb-xl-0">
+                  <div class="card-body">
+                    <div class="row ">
+                      <div class="col-auto">
+
+                        <div *ngIf="transfer.valor < 0" class="icon icon-shape text-white rounded-circle shadow bg-danger" >
+                          <i class="fas fa-star"></i>
+                        </div>
+                        <div *ngIf="transfer.valor > 0" class="icon icon-shape text-white rounded-circle shadow bg-info" >
+                          <i class="fas fa-star"></i>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Transferência</h5>
+
+                        <p *ngIf="transfer.valor > 0">Transferencia de {{transfer.targetUser}}</p>
+                        <p *ngIf="transfer.valor < 0">Transferencia para {{transfer.targetUser}}</p>
+
+                      </div>
+
+                      <div class="col-auto">
+                        <div>
+                          {{transfer.data | date:'dd/MM/y'}}
+                        </div>
+                        <div [ngStyle]="{color: transfer.valor  < 0 ? 'red' : '#11cdef'}">
+                          {{transfer.valor | currency:'BRL':true:'1.2-2'}}
+                        </div>
+                      </div>
+
+                    </div>
                   </div>
                 </div>
               </div>
+
             </div>
-          </div>
+
+
+             <!--Gols-->
+            <div class="col-sm-6 col-md-6">
+              <div class="row">
+                <div class="col-md-6 col-6"><label class="h5 text-white text-uppercase link-left"> Metas</label></div>
+                <div class="col-md-6 col-6"><a class="h5 text-white text-uppercase link-right" href="#">Criar meta</a></div>
+              </div>
+
+
+
+                <div  class="card card-stats mb-4 mb-xl-0 padding-top">
+                  <div class="card-body">
+                    <div class="row ">
+
+
+                      <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Carro</h5>
+
+                        <div class="progress-wrapper">
+                          <div class="progress-info">
+                            <div class="progress-label">
+                              <span>R$10,00 de R$1000,00</span>
+                            </div>
+
+                            <div class="progress-percentage">
+                              <span>60%</span>
+                            </div>
+                          </div>
+                          <div class="progress">
+                            <div class="progress-bar bg-default" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-auto">
+                        <i class="ni ni-fat-add">Depositar</i><br>
+                        <i class="ni ni-fat-delete">Retirar</i><br>
+                        <i class="ni ni-active-40">Alterar</i><br>
+                        <i class="ni ni-fat-remove">Excluir</i>
+
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+
+
+            </div>
+
         </div>
-         
-         
-         
+
+
       </div>
     </div>
   </div>
+
 </div>
-<div class="container-fluid mt--7">
-  <div class="row">
-    <div class="col-xl-8 mb-5 mb-xl-0">
-      <div class="card bg-gradient-default shadow">
-        <div class="card-header bg-transparent">
-          <div class="row align-items-center">
-            <div class="col">
-              <h6 class="text-uppercase text-light ls-1 mb-1">Overview</h6>
-              <h2 class="text-white mb-0">Sales value</h2>
-            </div>
-            <div class="col">
-              <ul class="nav nav-pills justify-content-end">
-                <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales"  (click)="data=datasets[0];updateOptions()">
-                  <a href="javascript:void(0)" class="nav-link py-2 px-3" [ngClass]="{'active':clicked===true}" data-toggle="tab" (click)="clicked=true;clicked1=false">
-                    <span class="d-none d-md-block">Month</span>
-                    <span class="d-md-none">M</span>
-                  </a>
-                </li>
-                <li class="nav-item" data-toggle="chart" data-target="#chart-sales"  (click)="data=datasets[1];updateOptions()">
-                  <a href="javascript:void(0)" class="nav-link py-2 px-3" [ngClass]="{'active':clicked1===true}" data-toggle="tab" (click)="clicked=false;clicked1=true">
-                    <span class="d-none d-md-block">Week</span>
-                    <span class="d-md-none">W</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <!-- Chart -->
-          <div class="chart">
-            <!-- Chart wrapper -->
-            <canvas id="chart-sales" class="chart-canvas"></canvas>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-4">
-      <div class="card shadow">
-        <div class="card-header bg-transparent">
-          <div class="row align-items-center">
-            <div class="col">
-              <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
-              <h2 class="mb-0">Total orders</h2>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <!-- Chart -->
-          <div class="chart">
-            <canvas id="chart-orders" class="chart-canvas"></canvas>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row mt-5">
-    <div class="col-xl-8 mb-5 mb-xl-0">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <div class="row align-items-center">
-            <div class="col">
-              <h3 class="mb-0">Page visits</h3>
-            </div>
-            <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">See all</a>
-            </div>
-          </div>
-        </div>
-        <div class="table-responsive">
-          <!-- Projects table -->
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Page name</th>
-                <th scope="col">Visitors</th>
-                <th scope="col">Unique users</th>
-                <th scope="col">Bounce rate</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">
-                  /argon/
-                </th>
-                <td>
-                  4,569
-                </td>
-                <td>
-                  340
-                </td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> 46,53%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/index.html
-                </th>
-                <td>
-                  3,985
-                </td>
-                <td>
-                  319
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> 46,53%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/charts.html
-                </th>
-                <td>
-                  3,513
-                </td>
-                <td>
-                  294
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> 36,49%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/tables.html
-                </th>
-                <td>
-                  2,050
-                </td>
-                <td>
-                  147
-                </td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> 50,87%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  /argon/profile.html
-                </th>
-                <td>
-                  1,795
-                </td>
-                <td>
-                  190
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-danger mr-3"></i> 46,53%
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-4">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <div class="row align-items-center">
-            <div class="col">
-              <h3 class="mb-0">Social traffic</h3>
-            </div>
-            <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">See all</a>
-            </div>
-          </div>
-        </div>
-        <div class="table-responsive">
-          <!-- Projects table -->
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Referral</th>
-                <th scope="col">Visitors</th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">
-                  Facebook
-                </th>
-                <td>
-                  1,480
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">60%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Facebook
-                </th>
-                <td>
-                  5,480
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">70%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Google
-                </th>
-                <td>
-                  4,807
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">80%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Instagram
-                </th>
-                <td>
-                  3,678
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">75%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  twitter
-                </th>
-                <td>
-                  2,645
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">30%</span>
-                    <div>
-                      <div class="progress">
-                        <div class="progress-bar bg-gradient-warning" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+
