--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
   <!-- Mask -->
-  <span class="mask bg-gradient-green opacity-8"></span>
+  <span class="mask bg-gradient-quickbank opacity-8"></span>
   <!-- Header container -->
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
@@ -18,7 +18,7 @@
 </div>
 <div class="container-fluid mt--7">
   <div class="row">
-    
+
     <div class="col-xl-12 order-xl-1">
       <div class="card bg-secondary shadow">
         <div class="card-header bg-white border-0">
@@ -36,9 +36,9 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Username</label>
-                      <input type="text" 
-                      id="input-username" 
-                      class="form-control form-control-alternative" 
+                      <input type="text"
+                      id="input-username"
+                      class="form-control form-control-alternative"
                       placeholder="Username"
                       formControlName="username">
                   </div>
@@ -46,9 +46,9 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-email">Email</label>
-                    <input type="email" 
-                           id="input-email" 
-                           class="form-control form-control-alternative" 
+                    <input type="email"
+                           id="input-email"
+                           class="form-control form-control-alternative"
                            placeholder="jesse@example.com"
                            formControlName="email">
                   </div>
@@ -58,9 +58,9 @@
                 <div class="col-lg-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">Nome</label>
-                    <input type="text" 
-                           id="input-first-name" 
-                           class="form-control form-control-alternative" 
+                    <input type="text"
+                           id="input-first-name"
+                           class="form-control form-control-alternative"
                            placeholder="First name"
                            formControlName="nome">
                   </div>
@@ -71,9 +71,9 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-agencia">Agencia</label>
-                    <input type="text" 
-                           id="input-agencia" 
-                           class="form-control form-control-alternative" 
+                    <input type="text"
+                           id="input-agencia"
+                           class="form-control form-control-alternative"
                            placeholder="Agencia"
                            formControlName="agencia">
                   </div>
@@ -81,14 +81,14 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-conta">Conta</label>
-                    <input type="text" 
-                           id="input-conta" 
-                           class="form-control form-control-alternative" 
+                    <input type="text"
+                           id="input-conta"
+                           class="form-control form-control-alternative"
                            placeholder="Conta"
                            formControlName="conta">
                   </div>
                 </div>
-              </div> 
+              </div>
             </div>
             <hr class="my-4" />
           </form>
