--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -58,6 +58,28 @@
           </div>
         </div>
 
+
+        <div class="row">
+          <div class="col-12 padding-top">
+            <button class="btn btn-success col-sm-4 col-md-4 btn-menu-dashboard" type="button">
+              <span class="btn-inner--icon"><i class="ni ni-bold-right"></i></span>
+              <span class="btn-inner--text" style="font-size: 11px;">Enviar</span>
+            </button>
+            <button class="btn btn-danger col-sm-4 col-md-4 btn-menu-dashboard" type="button">
+              <span class="btn-inner--icon"><i class="ni ni-credit-card"></i></span>
+              <span class="btn-inner--text" style="font-size: 11px;">Carteira</span>
+            </button>
+
+            <button class="btn btn-info col-sm-4 col-md-4 btn-menu-dashboard" type="button" (click)="logout()">
+              <span class="btn-inner--icon"><i class="ni ni-user-run"></i></span>
+              <span class="btn-inner--text" style="font-size: 11px;">Sair</span>
+            </button>
+          </div>
+        </div>
+
+
+
+
         <div class="row padding-top">
             <!--Transfer-->
 
@@ -115,41 +137,42 @@
                 <div class="col-md-6 col-6"><a class="h5 text-white text-uppercase link-right" href="#">Criar meta</a></div>
               </div>
 
+                <div *ngFor="let goal of goals" class="padding-top">
+                  <div   class=" padding-top card card-stats mb-4 mb-xl-0">
+                    <div class="card-body">
+                      <div class="row ">
 
 
-                <div  class="card card-stats mb-4 mb-xl-0 padding-top">
-                  <div class="card-body">
-                    <div class="row ">
+                        <div class="col">
+                          <h5 class="card-title text-uppercase text-muted mb-0">{{goal.nameGoal}}</h5>
 
+                          <div class="progress-wrapper">
+                            <div class="progress-info">
+                              <div class="progress-label">
+                                <span>{{goal.currentGoalValue | currency:'BRL':true:'1.2-2'}} de {{goal.valueGoal | currency:'BRL':true:'1.2-2'}}</span>
+                              </div>
 
-                      <div class="col">
-                        <h5 class="card-title text-uppercase text-muted mb-0">Carro</h5>
-
-                        <div class="progress-wrapper">
-                          <div class="progress-info">
-                            <div class="progress-label">
-                              <span>R$10,00 de R$1000,00</span>
+                              <div class="progress-percentage">
+                                <span>{{calcPorcent(goal.currentGoalValue,goal.valueGoal)}}%</span>
+                              </div>
                             </div>
-
-                            <div class="progress-percentage">
-                              <span>60%</span>
+                            <div class="progress">
+                              <div class="progress-bar bg-default" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" [style.width]="calcPorcent(goal.currentGoalValue,goal.valueGoal) + '%'"></div>
                             </div>
-                          </div>
-                          <div class="progress">
-                            <div class="progress-bar bg-default" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
                           </div>
                         </div>
-                      </div>
-                      <div class="col-auto">
-                        <i class="ni ni-fat-add">Depositar</i><br>
-                        <i class="ni ni-fat-delete">Retirar</i><br>
-                        <i class="ni ni-active-40">Alterar</i><br>
-                        <i class="ni ni-fat-remove">Excluir</i>
+                        <div class="col-auto">
+                          <i class="ni ni-fat-add">Depositar</i><br>
+                          <i class="ni ni-fat-delete">Retirar</i><br>
+                          <i class="ni ni-active-40">Alterar</i><br>
+                          <i class="ni ni-fat-remove">Excluir</i>
+
+                        </div>
 
                       </div>
-
                     </div>
                   </div>
+
                 </div>
 
 
@@ -164,4 +187,19 @@
 
 </div>
 
-
+<div class="modal fade" id="modal-mensagem">
+  <div class="modal-dialog">
+       <div class="modal-content">
+           <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+               <h4 class="modal-title">Título da mensagem</h4>
+           </div>
+           <div class="modal-body">
+               <p>Conteúdo da mensagem</p>
+           </div>
+           <div class="modal-footer">
+               <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+           </div>
+       </div>
+   </div>
+</div>
