--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -59,23 +59,7 @@
         </div>
 
 
-        <div class="row">
-          <div class="col-12 padding-top">
-            <button class="btn btn-success col-sm-4 col-md-4 btn-menu-dashboard" type="button">
-              <span class="btn-inner--icon"><i class="ni ni-bold-right"></i></span>
-              <span class="btn-inner--text" style="font-size: 11px;">Enviar</span>
-            </button>
-            <button class="btn btn-danger col-sm-4 col-md-4 btn-menu-dashboard" type="button">
-              <span class="btn-inner--icon"><i class="ni ni-credit-card"></i></span>
-              <span class="btn-inner--text" style="font-size: 11px;">Carteira</span>
-            </button>
-
-            <button class="btn btn-info col-sm-4 col-md-4 btn-menu-dashboard" type="button" (click)="logout()">
-              <span class="btn-inner--icon"><i class="ni ni-user-run"></i></span>
-              <span class="btn-inner--text" style="font-size: 11px;">Sair</span>
-            </button>
-          </div>
-        </div>
+        <app-modal-enviar></app-modal-enviar>
 
 
 
@@ -185,21 +169,4 @@
     </div>
   </div>
 
-</div>
-
-<div class="modal fade" id="modal-mensagem">
-  <div class="modal-dialog">
-       <div class="modal-content">
-           <div class="modal-header">
-               <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-               <h4 class="modal-title">Título da mensagem</h4>
-           </div>
-           <div class="modal-body">
-               <p>Conteúdo da mensagem</p>
-           </div>
-           <div class="modal-footer">
-               <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-           </div>
-       </div>
-   </div>
 </div>
