--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -143,12 +143,22 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-auto">
-                          <i class="ni ni-fat-add">Depositar</i><br>
-                          <i class="ni ni-fat-delete">Retirar</i><br>
-                          <i class="ni ni-active-40">Alterar</i><br>
-                          <i class="ni ni-fat-remove">Excluir</i>
+                        <div>
+                          <div class="row col-12 md:col-12">
+                            <div class="col-3 md:col-3" >
+                              <i class="ni ni-fat-add"></i><label style="font-size: 12px;font-weight: bold;">Deposito</label>
+                            </div>
+                            <div class="col-3 md:col-3" >
+                              <i class="ni ni-fat-delete"></i><label style="font-size: 12px;font-weight: bold">Retirar</label>
+                            </div>
+                            <div class="col-3 md:col-3" >
+                              <i class="ni ni-active-40" ></i><label style="font-size: 12px;font-weight: bold">Alterar</label>
+                            </div>
+                            <div class="col-3 md:col-3">
+                              <i class="ni ni-fat-remove"></i><label style="font-size: 12px;font-weight: bold">Excluir</label>
+                            </div>
 
+                          </div>
                         </div>
 
                       </div>
