--- a/src/app/share/modal-enviar/modal-enviar.component.html
+++ b/src/app/share/modal-enviar/modal-enviar.component.html
@@ -1,6 +1,8 @@
 <p-dialog  [(visible)]="modalEnviar" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true">
   <ng-template pTemplate="header">
-    Transferência
+    <label *ngIf="!usuarioTargetObj && !mensagemSucesso" >Transferência</label>
+    <label *ngIf="usuarioTargetObj && !mensagemSucesso" >Confirmação</label>
+    <label *ngIf="mensagemSucesso" >Comprovante</label>
   </ng-template>
   <form autocomplete="false" #formEnviar="ngForm">
     <ap-mensagem-erro [mensagem]="mensagemError"></ap-mensagem-erro>
