--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
         </div>
 
 
-        <app-modal-enviar></app-modal-enviar>
+        <app-modal-enviar (transferenciaRealizada)="atualizarTransferencias()"></app-modal-enviar>
 
 
         <div class="row padding-top">
