--- a/src/app/share/meta/meta.component.html
+++ b/src/app/share/meta/meta.component.html
@@ -33,7 +33,11 @@
             <i class="ni ni-active-40" ></i><label style="font-size: 12px;font-weight: bold">Alterar</label>
           </div>
           <div class="col-3 md:col-3">
-            <i class="ni ni-fat-remove"></i><label style="font-size: 12px;font-weight: bold">Excluir</label>
+            <a href="#" (click)="deletarMeta()">
+              <i class="fas fa-bullseye"></i>
+              <label style="font-size: 12px;font-weight: bold" >Excluir</label>
+            </a>
+
           </div>
 
         </div>
