--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -142,7 +142,7 @@
               </div>
 
                 <div *ngFor="let g of goals" class="padding-top">
-                  <app-meta [metaExcluida]="atualizarMetas()" [goal]="g"></app-meta>
+                  <app-meta (mostraModalAdicionarMeta)="adicionarEmMeta($event)" [metaExcluida]="atualizarMetas()" [goal]="g"></app-meta>
                 </div>
 
                 <div *ngIf="goals.length < 1">
@@ -170,7 +170,7 @@
 
             <p-dialog  [(visible)]="modalCriarMeta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true">
               <ng-template pTemplate="header">
-                <label *ngIf="!usuarioTargetObj && !mensagemSucesso" >Criar meta</label>
+                <label>Criar meta</label>
               </ng-template>
 
               <form autocomplete="false" #formCriarMeta="ngForm">
@@ -209,6 +209,39 @@
 
             </p-dialog>
 
+            <p-dialog  [(visible)]="modalAdicionameta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true">
+              <ng-template pTemplate="header">
+                <label>Atualizar meta</label>
+              </ng-template>
+
+              <form autocomplete="false" #formAtualizarMeta="ngForm">
+                <ap-mensagem-erro [mensagem]="mensagemError"></ap-mensagem-erro>
+
+                <div class="grid padding-top">
+                  <p *ngIf="mensagemMetaAtualizada" style="color: green;">{{mensagemMetaAtualizada}}</p>
+
+                  <div class="col-12 p-fluid">
+                    <label for="valorAdicionadoInput">Valor a ser adicionado</label>
+
+                    <p-inputNumber mode="currency" [min]="1" placeholder="0,00" [minFractionDigits]="2" locale="pt-BR" currency="BRL" ngModel name="valor" #valor="ngModel" [required]="true" [(ngModel)]="valorAddMeta" (focus)="mensagemError = null" [disabled]="!!mensagemMetaAtualizada"></p-inputNumber>
+
+                    <app-message [control]="valor.control" error="required" text="Informe o valor"></app-message>
+                 </div>
+
+                 <div class="col-12 p-fluid padding-top" *ngIf="!mensagemMetaAtualizada">
+                  <button pButton type="button" class="p-button-success p-button-rounded w-100" label="Concluir" [disabled]="formAtualizarMeta.invalid" (click)="atualizarMeta()"></button>
+                </div>
+
+                <div class="col-12 p-fluid padding-top" *ngIf="mensagemMetaAtualizada">
+                  <button pButton type="button" class="p-button-secondary p-button-rounded w-100" label="Sair" [disabled]="formAtualizarMeta.invalid" (click)="finishAtualizarMeta()"></button>
+                </div>
+
+                </div>
+
+              </form>
+
+            </p-dialog>
+
         </div>
 
 
@@ -217,3 +250,6 @@
   </div>
 
 </div>
+
+
+
