--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,7 +5,6 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Bem Vindo!</h1>
-          <p class="text-lead text-light">Simples, transparente e inovador: conheça o Quickbank.</p>
         </div>
       </div>
     </div>
@@ -80,12 +79,7 @@
                 </ap-vmessage>
               </div>
             </div>
-            <div class="custom-control custom-control-alternative custom-checkbox">
-              <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-              <label class="custom-control-label" for=" customCheckLogin">
-                <span class="text-muted">Lembrar-me</span>
-              </label>
-            </div>
+
             <div class="text-center">
               <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
             </div>
@@ -97,7 +91,7 @@
           <a href="javascript:void(0)" class="text-light"><small>Esqueceu sua senha?</small></a>
         </div>
         <div class="col-6 text-right">
-          <a href="javascript:void(0)" class="text-light"><small>Criar nova conta</small></a>
+          <a href="javascript:void(0)" class="text-light" routerLink="/register"><small>Criar nova conta</small></a>
         </div>
       </div>
     </div>
