--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,13 @@ a{
   text-decoration: none;
 }
 
+label{
+  color: #a3a3a3;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  border: 1px;
+}
+
 .link-right{
 
   float: right;
