primeira parte dos investimentos

--- a/src/app/share/modal-enviar/modal-enviar.component.html
+++ b/src/app/share/modal-enviar/modal-enviar.component.html
@@ -72,22 +72,22 @@
   <div class="col-12 padding-top">
     <button class="btn btn-success col-sm-3 col-md-3 btn-menu-dashboard" type="button" (click)="showDialogEnviar()">
       <span class="btn-inner--icon"><i class="ni ni-bold-right"></i></span>
-      <span class="txt-btn-principal">Enviar</span>
+      <span class="txt-btn-principal" style="font-size: 10px;">Enviar</span>
     </button>
 
     <button class="btn btn-danger col-sm-3 col-md-3 btn-menu-dashboard" type="button">
       <span class="btn-inner--icon"><i class="ni ni-credit-card"></i></span>
-      <span class="txt-btn-principal" >Carteira</span>
+      <span class="txt-btn-principal"  style="font-size: 10px;">Carteira</span>
     </button>
 
-    <button class="btn btn-primary col-sm-3 col-md-3 btn-menu-dashboard" type="button">
+    <button class="btn btn-primary col-sm-3 col-md-3 btn-menu-dashboard" type="button" (click)="invest()">
       <span class="btn-inner--icon"><i class="ni ni-chart-bar-32"></i></span>
-      <span class="txt-btn-principal" >Invest</span>
+      <span class="txt-btn-principal"  style="font-size: 10px;">Invest</span>
     </button>
 
     <button class="btn btn-warning-two col-sm-3 col-md-3 btn-menu-dashboard" type="button" (click)="logout()">
       <span class="btn-inner--icon"><i class="ni ni-user-run"></i></span>
-      <span class="txt-btn-principal" >Sair</span>
+      <span class="txt-btn-principal"  style="font-size: 10px;">Sair</span>
     </button>
   </div>
 </div>
